fix: arrows in reviewslider on small screens

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -142,11 +142,11 @@
                 left: 50%
                 transform: translate(-50%, 0)
                 &--prev
-                    margin-left: -150px
+                    margin-left: -90px
                 //    left: 50%
                 //    transform: translate(-50%, 0)
                 &--next
-                    margin-left: 150px
+                    margin-left: 90px
                 //    right: -50%
                 //    padding-left: 100px
                 //    transform: translate(50%, 0)
